# RVC-VITS-speech-synthesis

./: .gitignore  1.md  DEPLOYMENT.md  FORMS.md  LICENSE  README.md  Readme.md  environment.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/core/audio/: denoiser.py  io.py  silence_remover.py  slicer.py  vocal_separator.py
app/core/metrics/: mcd.py  secs.py  training_curves.py  tts_eval.py  wer.py
app/core/postprocess/: pedalboard_chain.py
app/core/rvc/: inferencer.py  trainer.py
app/core/tts/: hf_vits.py  inferencer.py  manifest.py  trainer.py
app/styles/: blue_gray.qss  dark.qss  gray.qss  light.qss
app/ui/: info_dialog.py  main_window.py
app/ui/preprocessing/: _common.py  denoiser.py  silence_remover.py  slicer.py  vocal_remover.py
app/ui/rvc/: inference.py  train.py
app/ui/tts/: inference.py  train.py
app/utils/: env_check.py  path_utils.py  transliterate.py
app/workers/: base_worker.py  log_parser.py  progress_tracker.py
docs/: HF_VITS_FINETUNE.md
installer/linux/: build_tarball.sh  install.sh
installer/windows/: download_rvc_weights.bat  inno_setup.iss  install.bat
scripts/: _bootstrap.py  build_tts_manifest.py  eval_hf_checkpoints.py  export_hf_checkpoint.py  normalize_tts_manifest.py  prepare_hf_vits_dataset.py  run_demucs.py  run_denoiser.py  run_hf_vits_train.py  run_rvc_infer.py  run_rvc_train.py  run_silence_remover.py  run_slicer.py  run_vits_infer.py  run_vits_train.py
tests/: test_audio_io.py  test_log_parser.py  test_manifest.py  test_path_utils.py  test_transliterate.py  test_wer.py
(+8 files in other folders)
